--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="calculator">
             <input type="text" placeholder="0" id="output-screen">
-            <button onclick="Clear()">Cl</button>
+            <button onclick="Clear()">Cʟᴇᴀʀ</button>
             <button onclick="del()">DEL</button>
             <button onclick="display('%')">%</button>
             <button onclick="display('/')">/</button>
