--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="calculator">
             <input type="text" placeholder="0" id="output-screen">
             <button onclick="Clear()">Cʟᴇᴀʀ</button>
-            <button onclick="del()">DEL</button>
+            <button onclick="del()">Dᴇʟᴇᴛᴇ</button>
             <button onclick="display('%')">%</button>
             <button onclick="display('/')">/</button>
             <button onclick="display('7')">7</button>
